bgdk/overlays/cluster 1/bgd-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eportal-liferays-prod
spec:
  replicas: 1
