bgdk/overlays/cluster 1/bgd-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: eportal-liferays
  namespace: eportal-staging
  creationTimestamp: '2023-08-29T06:21:42Z'
  labels:
    app: eportal-liferays
    app.kubernetes.io/component: eportal-liferays
    app.kubernetes.io/instance: eportal-liferays
    app.kubernetes.io/name: eportal-liferays
    app.kubernetes.io/part-of: liferay-test
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftWebConsole"},"creationTimestamp":"2023-08-29T06:21:42Z","labels":{"app":"liferaytest","app.kubernetes.io/component":"liferaytest","app.kubernetes.io/instance":"liferaytest","app.kubernetes.io/name":"liferaytest","app.kubernetes.io/part-of":"liferay-test"},"managedFields":[{"apiVersion":"v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/la [...]
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: argocd-controller
      operation: Update
      apiVersion: v1
      time: '2023-08-29T06:21:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:clusterIPs': {}
          'f:sessionAffinity': {}
          'f:clusterIP': {}
          'f:type': {}
          'f:ipFamilyPolicy': {}
          'f:selector': {}
          'f:ipFamilies': {}
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":8000,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8009,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8081,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":11311,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
spec:
  selector:
    matchLabels:
      app: eportal-liferays-prod
  clusterIP: 
  ipFamilies:
    - IPv4
  ports:
    - name: 11311-tcp
      protocol: TCP
      port: 11311
      targetPort: 11311
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: 8009-tcp
      protocol: TCP
      port: 8009
      targetPort: 8009
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
  internalTrafficPolicy: Cluster
  clusterIPs:
    
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: eportal-liferays
    deployment: eportal-liferays
status:
  loadBalancer: {}
